@@ -11,7 +11,6 @@ import static seedu.address.logic.parser.CliSyntax.PREFIX_TAG;
 import static seedu.address.testutil.Assert.assertThrows;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.commons.core.index.Index;
@@ -71,7 +70,9 @@ public class CommandTestUtil {
 
     public static final String INVALID_GENDER_DESC = " " + PREFIX_GENDER + "Z"; // 'Z' not allowed in gender
     public static final String INVALID_QUALIFICATION_DESC = " " + PREFIX_QUALIFICATION + "4"; // invalid qualification
-    public static final String INVALID_REMARK_DESC = " " + PREFIX_REMARK + " "; // ' ' not allowed in remark
+    public static final String INVALID_REMARK_DESC = " " + PREFIX_REMARK
+            + "This is a long remark that exceeds 100 characters. " // more than 100 characters not allowed in remark
+            + "This should not be allowed as a remark and should throw an error.";
     public static final String INVALID_NAME_DESC = " " + PREFIX_NAME + "James&"; // '&' not allowed in names
     public static final String INVALID_PHONE_DESC = " " + PREFIX_PHONE + "911a"; // 'a' not allowed in phones
     public static final String INVALID_TAG_DESC = " " + PREFIX_TAG + "ABCDE"; //  invalid tag argument
@@ -79,7 +80,8 @@ public class CommandTestUtil {
     public static final String INVALID_TAG = "ABCDE";
     public static final String INVALID_ZERO_INDEX = "0";
     public static final String INVALID_INDEX = "-69";
-
+    public static final String INVALID_INTEGER_MIN = Long.toString(Integer.MIN_VALUE + 1);
+    public static final String INVALID_INTEGER_MAX = Long.toString(Integer.MAX_VALUE + 1);
     public static final String PREAMBLE_WHITESPACE = "\t  \r  \n";
 
     public static final EditCommand.EditStudentDescriptor DESC_AMY;
@@ -157,7 +159,7 @@ public class CommandTestUtil {
 
         Person person = model.getFilteredTutorList().get(targetIndex.getZeroBased());
         final String[] splitName = person.getName().fullName.split("\\s+");
-        model.updateFilteredTutorList(new NameContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+        model.updateFilteredTutorList(new NameContainsKeywordsPredicate(List.of(splitName[0])));
 
         assertEquals(1, model.getFilteredTutorList().size());
     }
@@ -171,7 +173,7 @@ public class CommandTestUtil {
 
         Person person = model.getFilteredStudentList().get(targetIndex.getZeroBased());
         final String[] splitName = person.getName().fullName.split("\\s+");
-        model.updateFilteredStudentList(new NameContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+        model.updateFilteredStudentList(new NameContainsKeywordsPredicate(List.of(splitName[0])));
 
         assertEquals(1, model.getFilteredStudentList().size());
     }
